更新依赖方式、添加测试代码

--- a/drawee-text-view/demo/build.gradle
+++ b/drawee-text-view/demo/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion depends.compileSdkVersion
+    buildToolsVersion depends.buildToolsVersion
 
     defaultConfig {
         applicationId "com.bilibili.draweetext.demo"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion depends.minSdkVersion
+        targetSdkVersion depends.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
@@ -23,9 +23,9 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
-    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    compile project(':draweetext')
-    compile "com.facebook.fresco:webpsupport:${rootProject.ext.frescoVersion}"
-    compile "com.facebook.fresco:animated-gif:${rootProject.ext.frescoVersion}" /*add gif decoding support*/
+    implementation depends.appcompat_v7()
+    implementation "com.android.support:recyclerview-v7:${depends.supportVersion}"
+    implementation project(':draweetext')
+    implementation "com.facebook.fresco:webpsupport:${rootProject.ext.frescoVersion}"
+    implementation "com.facebook.fresco:animated-gif:${rootProject.ext.frescoVersion}" /*add gif decoding support*/
 }
