--- a/drawee-text-view/draweetext/build.gradle
+++ b/drawee-text-view/draweetext/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion depends.compileSdkVersion
+    buildToolsVersion depends.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion depends.minSdkVersion
+        targetSdkVersion depends.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -21,14 +21,15 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile('org.robolectric:robolectric:3.0') {
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.7.19'
+    testImplementation('org.robolectric:robolectric:3.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
-    compile "com.android.support:support-core-utils:${rootProject.ext.supportLibraryVersion}"
-    compile "com.facebook.fresco:fresco:${rootProject.ext.frescoVersion}" /*required*/
-    compile "com.facebook.fresco:animated-base:${rootProject.ext.frescoVersion}" /*required*/
-    provided "com.facebook.fresco:animated-gif:${rootProject.ext.frescoVersion}"
+    implementation "com.android.support:support-core-utils:${depends.supportVersion}"
+    implementation "com.facebook.fresco:fresco:${rootProject.ext.frescoVersion}" /*required*/
+    implementation "com.facebook.fresco:animated-base:${rootProject.ext.frescoVersion}" /*required*/
+    compileOnly "com.facebook.fresco:animated-gif:${rootProject.ext.frescoVersion}"
+    api "com.facebook.fresco:fresco:${rootProject.ext.frescoVersion}"
 }
